--- a/templates/index.html
+++ b/templates/index.html
@@ -1,16 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}" type="text/css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="icon" href="{{ url_for('static', filename='favico.png') }}">
+    <img class="avatar" src="{{ url_for('static', filename='images/avatar.png') }}" alt="Avatar">
     <title>{{ name }}'s Info</title>
 </head>
 <body>
     <h2>{{ name }}'s web info</h2>
     {# length 过滤其获取变量长度 #}
     <p>{{ movies|length }} Titles</p>
-    <ul>
+    <ul class="movie-list">
         {# 迭代 #}
         {% for movie in movies %}
         <li>{{ movie.title }}-{{ movie.year }}</li>
@@ -19,5 +22,6 @@
     <footer>
         <small>&copy; 2020 Flask web</small>
     </footer>
+    <img class="totoro" alt="Walking..." src="{{ url_for('static', filename='images/totoro.gif') }}"
 </body>
 </html>
