--- a/templates/index.html
+++ b/templates/index.html
@@ -7,10 +7,10 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="icon" href="{{ url_for('static', filename='favico.png') }}">
     <img class="avatar" src="{{ url_for('static', filename='images/avatar.png') }}" alt="Avatar">
-    <title>{{ name }}'s Info</title>
+    <title>{{ user.name }}'s Info</title>
 </head>
 <body>
-    <h2>{{ name }}'s web info</h2>
+    <h2>{{ user.name }}'s web info</h2>
     {# length 过滤其获取变量长度 #}
     <p>{{ movies|length }} Titles</p>
     <ul class="movie-list">
