--- a/templates/index.html
+++ b/templates/index.html
@@ -2,14 +2,26 @@
 {% block content %}
 {# length 过滤其获取变量长度 #}
 <p>{{ movies|length }} Titles</p>
+
+{# 表单 #}
+<form method="post">
+    Name <input type="text" name="title" autocomplete="off" requ ired>
+    Year <input type="text" name="year" autocomplete="off" requi red>
+    <input class="btn" type="submit" name="submit" value="Add">
+</form>
+
 <ul class="movie-list">
     {# 迭代 #}
     {% for movie in movies %}
     <li>
         {{ movie.title }}-{{ movie.year }}
         <span class="float-right">
-            <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank"
-                title="Find this movie on IMDb">IMDb</a>
+            <form class="inline-form" method="post" action="{{ url_for('delete', movie_id=movie.id) }}">
+                <input class='btn' type="submit" name="delete" value="delete" onclick="return confirm('Are you sure?')">
+            </form>
+                <a class="btn" href="{{ url_for('edit', movie_id=movie.id) }}">Edit</a>
+                <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank"
+                    title="Find this movie on IMDb">IMDb</a>
         </span>
     </li>
 
