--- a/templates/index.html
+++ b/templates/index.html
@@ -3,12 +3,14 @@
 {# length 过滤其获取变量长度 #}
 <p>{{ movies|length }} Titles</p>
 
+{% if current_user.is_authenticated %}
 {# 表单 #}
 <form method="post">
     Name <input type="text" name="title" autocomplete="off" requ ired>
     Year <input type="text" name="year" autocomplete="off" requi red>
     <input class="btn" type="submit" name="submit" value="Add">
 </form>
+{% endif %}
 
 <ul class="movie-list">
     {# 迭代 #}
@@ -16,10 +18,12 @@
     <li>
         {{ movie.title }}-{{ movie.year }}
         <span class="float-right">
+            {% if current_user.is_authenticated %}
             <form class="inline-form" method="post" action="{{ url_for('delete', movie_id=movie.id) }}">
                 <input class='btn' type="submit" name="delete" value="delete" onclick="return confirm('Are you sure?')">
             </form>
                 <a class="btn" href="{{ url_for('edit', movie_id=movie.id) }}">Edit</a>
+            {% endif %}
                 <a class="imdb" href="https://www.imdb.com/find?q={{ movie.title }}" target="_blank"
                     title="Find this movie on IMDb">IMDb</a>
         </span>
